the swaying pine that pops up while the name search is 'thinking' was off-center, had to fix

--- a/src/components/popup/Spinner.module.scss
+++ b/src/components/popup/Spinner.module.scss
@@ -13,7 +13,7 @@
   align-items: center;
 }
 
-.spinnerDiv > figure {
+.spinnerDiv > image {
   width: 15%;
   z-index: 995;
 }
